<resources>
    <string name="app_name">Bulletin board</string>

     <!--Menu Drawer Strings-->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Автомобили</string>
    <string name="ad_smartphones">Смартфоны</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_dm">Бытвовая техника</string>

    <string name="ad_cat2">Аккаунт</string>
    <string name="aсс_sing_up">Регистрация</string>
    <string name="aсс_sing_in">Вход</string>
    <string name="aсс_sing_out">Выход</string>
    <string name="open">Открыт</string>
    <string name="close">Закрыт</string>
    <string name="not_reg">Войдите или зарегестируйтесь</string>

    <!--Sing Dialog-->
    <string name="emailHint">Email</string>
    <string name="email_reset_pass_was_sent">Письмо для сброса пароля отправлено на ваш email</string>
    <string name="dialog_reset_email_massage">Для востановления пароля укажите email</string>
    <string name="passwordHint">Password</string>
    <string name="sing_up_action">Зарегистрироваться</string>
    <string name="sing_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sing_up_error">Не удалось зарегестироваться</string>
    <string name="sing_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить письмо для подтверждения</string>
    <string name="send_verification_email_done">На вашу почту была отправлена ссылка для подтверждения</string>
    <string name="send_button">Отправить</string>
    <string name="do_not_empty_email">Поле email не может быть пустым</string>
</resources>