<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvSingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aсс_sing_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errEmptyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/dialog_reset_email_massage"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/tvSingTitle"
        app:layout_constraintStart_toStartOf="@id/tvSingTitle"
        app:layout_constraintTop_toBottomOf="@id/tvSingTitle" />

    <EditText
        android:id="@+id/enSingEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errEmptyEmail" />

    <EditText
        android:id="@+id/enSingPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enSingEmail" />


    <Button
        android:id="@+id/singInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sing_up_action"
        app:layout_constraintEnd_toEndOf="@id/enSingEmail"
        app:layout_constraintStart_toStartOf="@id/enSingEmail"
        app:layout_constraintTop_toBottomOf="@id/enSingPassword" />

    <Button
        android:id="@+id/btForgetP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/enSingEmail"
        app:layout_constraintStart_toStartOf="@id/enSingEmail"
        app:layout_constraintTop_toBottomOf="@id/singInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>